.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in Finagle's user's guide.

6.x
-----

6.26.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-kestrel: Replace deprecated finagle-kestrel package with finagle-kestrelx.

  * finagle-core: Define `WeightedSocketAddress` as a case class. Add
    `WeightedSocketAddress.extract` method to extract weight.

  * finagle-core: Constructing a new Balancer that can be injected into a Finagle client
    was unnecessarily complex and non-uniform. We removed the legacy constructors around
    defining the collection of endpoints and simplified the interface to `LoadBalancerFactory`.
    Now, `com.twitter.finagle.loadbalancer.Balancers` defines the collection of balancer
    constructors.

  * finagle-core: Aperture can no longer be enabled via command line flags. Configuring
    per-client settings globally is generally not a good idea and we're working to remove
    these flags from Finagle. Use the constructors in `com.twitter.finagle.loadbalancer.Balancers`
    to create an instance that can be injected into a client.

6.25.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-core: `c.t.f.builder.Server` now implements `c.t.f.ListeningServer`.

  * finagle-core: `c.t.f.Server.serveAndAnnounce` with a `ServiceFactory` had
    its first argument renamed to `name` from `forum`.

  * finagle-core: Add an attribute map to `c.t.f.Addr.Bound`.

  * finagle-core: `c.t.f.builder.ClientConfig.FailFast` has moved to
    `c.t.f.FailFastFactory.FailFast`.

  * finagle-core: NoBrokersAvailableException now has two Dtab constructor
    arguments, both the base and local Dtabs.

  * finagle-core: `c.t.f.Failure` convenience constructors (e.g., `Failure.Cause`,
    `Failure.Rejected`) were removed in favor of uniform flag treatment, and clean
    separation of attributes from interpretation of those attributes.
