@@ -1,1 +1,0 @@
-com.twitter.finagle.exception.ExceptionReporter
