@@ -1,9 +1,8 @@
 package com.twitter.finagle.exception
 
+import com.twitter.finagle.exception.thriftscala.{LogEntry, ResultCode, Scribe}
 import com.twitter.util._
-import com.twitter.finagle.util.LoadedReporterFactory
 import java.net.{InetAddress, InetSocketAddress}
-import com.twitter.finagle.exception.thriftscala.{ResultCode, LogEntry, Scribe}
 import org.junit.runner.RunWith
 import org.mockito.ArgumentCaptor
 import org.mockito.Matchers.anyObject
@@ -15,7 +14,7 @@ import org.scalatest.mock.MockitoSugar
 @RunWith(classOf[JUnitRunner])
 class DefaultReporterTest extends FunSuite with MockitoSugar {
   val logger = mock[Scribe.FutureIface]
-  when(logger.log(anyObject())) thenReturn(Future.value(ResultCode.Ok))
+  when(logger.log(anyObject())).thenReturn(Future.value(ResultCode.Ok))
 
   val captor = ArgumentCaptor.forClass(classOf[Seq[LogEntry]])
 
@@ -39,7 +38,7 @@ class DefaultReporterTest extends FunSuite with MockitoSugar {
 @RunWith(classOf[JUnitRunner])
 class ClientReporterTest extends FunSuite with MockitoSugar {
   val logger = mock[Scribe.FutureIface]
-  when(logger.log(anyObject())) thenReturn(Future.value(ResultCode.Ok))
+  when(logger.log(anyObject())).thenReturn(Future.value(ResultCode.Ok))
 
   val captor = ArgumentCaptor.forClass(classOf[Seq[LogEntry]])
 
@@ -64,7 +63,7 @@ class ClientReporterTest extends FunSuite with MockitoSugar {
 @RunWith(classOf[JUnitRunner])
 class SourceClientReporterTest extends FunSuite with MockitoSugar {
   val logger = mock[Scribe.FutureIface]
-  when(logger.log(anyObject())) thenReturn(Future.value(ResultCode.Ok))
+  when(logger.log(anyObject())).thenReturn(Future.value(ResultCode.Ok))
 
   val captor = ArgumentCaptor.forClass(classOf[Seq[LogEntry]])
 
@@ -92,26 +91,26 @@ class SourceClientReporterTest extends FunSuite with MockitoSugar {
 @RunWith(classOf[JUnitRunner])
 class ExceptionReporterTest extends FunSuite with MockitoSugar {
 
-  test("logs an exception through the loaded reporter") {
+  test("logs an exception") {
     val logger = mock[Scribe.FutureIface]
-    when(logger.log(anyObject())) thenReturn(Future.value(ResultCode.Ok))
+    when(logger.log(anyObject())).thenReturn(Future.value(ResultCode.Ok))
     val captor = ArgumentCaptor.forClass(classOf[Seq[LogEntry]])
     val tse = new TestServiceException("service", "my cool message")
 
-    val reporter = LoadedReporterFactory("service", None).asInstanceOf[Reporter]
+    val reporter = new ExceptionReporter().apply("service", None)
     reporter.copy(client = logger).handle(tse.throwable)
     verify(logger).log(captor.capture())
   }
 
-  test("logs a client exception through the loaded reporter") {
+  test("logs a client exception") {
     val logger = mock[Scribe.FutureIface]
-    when(logger.log(anyObject())) thenReturn(Future.value(ResultCode.Ok))
+    when(logger.log(anyObject())).thenReturn(Future.value(ResultCode.Ok))
     val captor = ArgumentCaptor.forClass(classOf[Seq[LogEntry]])
     val socket = new InetSocketAddress(InetAddress.getLoopbackAddress, 0)
     val tse = new TestServiceException("service", "my cool message",
       clientAddress = Some(socket.getAddress.getHostName))
 
-    val reporter = LoadedReporterFactory("service", Some(socket)).asInstanceOf[Reporter]
+    val reporter = new ExceptionReporter().apply("service", Some(socket))
     reporter.copy(client = logger).handle(tse.throwable)
     verify(logger).log(captor.capture())
   }
